# testForNAT

./: README.md
p2pStun/app/: CMakeLists.txt  build.gradle
p2pStun/app/src/androidTest/java/com/p2p/p2pstun/: ExampleInstrumentedTest.java
p2pStun/app/src/main/: AndroidManifest.xml
p2pStun/app/src/main/cpp/: P2PPeer.cpp  P2PPeer.h  appLog.h  native-lib.cpp
p2pStun/app/src/main/cpp/cppToJava/: CppCallJava.cpp  CppCallJava.h
p2pStun/app/src/main/cpp/stun/: config.h  debug.c  debug.h  rand.c  stun5389.c  stunagent.c  stunhmac.c  stunmessage.c
p2pStun/app/src/main/cpp/stun/tools/: stunbdc.c  stund.c
p2pStun/app/src/main/cpp/stun/usages/: bind.c  bind.h  turn.c  turn.h
p2pStun/app/src/main/java/com/p2p/p2pstun/: LocalNetInfo.java  MainActivity.java
p2pStun/app/src/main/res/layout/: activity_main.xml
p2pStun/app/src/main/res/values/: strings.xml
p2pStun/app/src/test/java/com/p2p/p2pstun/: ExampleUnitTest.java
p2pStun/gradle/wrapper/: gradle-wrapper.properties
